--- a/index.html
+++ b/index.html
@@ -838,6 +838,24 @@
             <p>That depends! If you would like to distribute your web app to your users as a downloadable desktop app then ToDesktop is for you.</p>
           </dd>
         </div>
+        <div class="cursor-pointer group rounded-xl border bg-gray-50 border-gray-200 p-6">
+          <dt class="flex justify-between items-center" aria-controls="faq-5">
+            <p class="font-semibold text-lg">Is ToDesktop For Me?</p>
+            <i class="fa-solid fa-chevron-up -rotate-180 transition"></i>
+          </dt>
+          <dd id="faq-5" class="hidden text-lg font-light mt-6">
+            <p>That depends! If you would like to distribute your web app to your users as a downloadable desktop app then ToDesktop is for you.</p>
+          </dd>
+        </div>
+        <div class="cursor-pointer group rounded-xl border bg-gray-50 border-gray-200 p-6">
+          <dt class="flex justify-between items-center" aria-controls="faq-6">
+            <p class="font-semibold text-lg">Is ToDesktop For Me?</p>
+            <i class="fa-solid fa-chevron-up -rotate-180 transition"></i>
+          </dt>
+          <dd id="faq-6" class="hidden text-lg font-light mt-6">
+            <p>That depends! If you would like to distribute your web app to your users as a downloadable desktop app then ToDesktop is for you.</p>
+          </dd>
+        </div>
       </div>
     </div>
     <div class="h-[1000px]"></div>
