--- a/index.html
+++ b/index.html
@@ -858,8 +858,27 @@
         </div>
       </div>
     </div>
-    <div class="h-[1000px]"></div>
   </main>
+  <footer class="container">
+    <div class="rounded-lg border lg:border-none lg:bg-gray-50 bg-gray-50 flex flex-col lg:flex-row-reverse items-center px-8 py-12 gap-8">
+      <a href="#" class="font-light font-display">Documentation</a>
+      <div class="flex gap-8 text-lg">
+        <a href="#" class="text-gray-600 hover:text-gray-900"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#" class="text-gray-600 hover:text-gray-900"><i class="fa-brands fa-github"></i></a>
+      </div>
+      <a href="#" id="brand" class="flex gap-2 items-center flex-1">
+        <img class="object-cover max-w-12 max-h-12" src="./assets/asset 0.png" alt="logo" />
+        <span class="text-lg font-medium font-display">ToDeskTop</span>
+      </a>
+    </div>
+    <div id="sub-footer" class="flex flex-col gap-6 items-center justify-center my-12">
+      <div class="flex gap-2 items-center">
+        <img src="./assets/asset 54.svg" alt="Y-combinator" class="w-4 h-4">
+        <p class="etxt-sm text-gray-800">A Y Combinator Company</p>
+      </div>
+      <p class="text-sm text-gray-400">© 2024 ToDesktop, Inc. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 <script src="script.js"></script>
 
